force-app/main/default/objects/AI_Lead__c/AI_Lead__c.object-meta.xml
<CustomObject>
    <label>AI Lead</label>
    <nameField>
        <label>AI Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>