force-app/main/default/objects/AI_Lead__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <label>company</label>
    <length>180</length>
    <type>Text</type>
</CustomField>