force-app/main/default/objects/AI_Lead__c/fields/Lead_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_c__c</fullName>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>