force-app/main/default/objects/AI_Lead__c/validationRules/AI_Summary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AI_Summary_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Qualification_Status__c, &quot;Qualified&quot;),
ISBLANK(AI_Summary__c)
)</errorConditionFormula>
    <errorMessage>AI Summary is required for qualified leads.</errorMessage>
</ValidationRule>