force-app/main/default/objects/AI_Lead__c/validationRules/Product_Interest_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Interest_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Lead_Category__c, &quot;Hot&quot;),
ISBLANK(TEXT(Product_Interest__c))
)</errorConditionFormula>
    <errorDisplayField>Product_Interest__c</errorDisplayField>
    <errorMessage>Select Product Interest for Hot Leads.</errorMessage>
</ValidationRule>