force-app/main/default/objects/AI_Lead__c/validationRules/Validate_Lead_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lead_Score</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 Lead_Score_c__c &lt; 0,
 Lead_Score_c__c &gt; 100
)</errorConditionFormula>
    <errorDisplayField>Lead_Score_c__c</errorDisplayField>
    <errorMessage>Lead Score must be between 0 and 100.</errorMessage>
</ValidationRule>